5-gaara_erp/.pytest_out.txt
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-8.4.1, pluggy-1.6.0 -- D:\home\ubuntu\gaara_erp_v5\.venv\Scripts\python.exe
cachedir: .pytest_cache
django: version: 5.2.5
rootdir: D:\home\ubuntu\gaara_erp_v5
configfile: pyproject.toml
testpaths: gaara_erp
plugins: cov-6.2.1, django-4.11.1
collecting ... collected 74 items / 1 error

=================================== ERRORS ====================================
_ ERROR collecting gaara_erp/agricultural_modules/farms/tests/test_services.py _
.venv\Lib\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\hadym\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\hadym\AppData\Local\Programs\Python\Python311\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "D:\home\ubuntu\gaara_erp_v5\gaara_erp\agricultural_modules\farms\tests\test_services.py", line 60
E       self.user = User.objects.create_user(username='field_user', password='password123')
E                                                                                          ^
E   IndentationError: unindent does not match any outer indentation level
=========================== short test summary info ===========================
ERROR gaara_erp/agricultural_modules/farms/tests/test_services.py
!!!!!!!!!!!!!!!!!!!!!!!!!! stopping after 1 failures !!!!!!!!!!!!!!!!!!!!!!!!!!
========================= 1 warning, 1 error in 1.90s =========================
